--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						<h3 class="slide__title">Посмотрите примеры работ в которых использованы наши товары для вышивки и рукоделия</h3>
 						<div class="slide__wrapper">
 							<div class="slide__img">
-								<img src="/img/slider/1.jpg" alt="slide 1">
+								<img src="img/slider/1.jpg" alt="slide 1">
 							</div>
 						</div>
 					</div>
@@ -218,25 +218,49 @@
 						<div class="besides__item">
 							<h4 class="besides__name">Шкатулки и игольницы</h4>
 							<div class="besides__img">
-								<img src="/img/products/2_1.jpg" alt="besides item 1">
+								<img src="img/products/2_1.jpg" alt="besides item 1">
 							</div>
 							<button class="btn btn--orange btn--prise" name="besides-item_1">Узнать стоимость</button>
 						</div>
 						<div class="besides__item">
 							<h4 class="besides__name">Кружева</h4>
 							<div class="besides__img">
-								<img src="/img/products/2_2.jpg" alt="besides item 2">
+								<img src="img/products/2_2.jpg" alt="besides item 2">
 							</div>
 							<button class="btn btn--orange btn--prise" name="besides-item_2">Узнать стоимость</button>
 						</div>
 						<div class="besides__item">
 							<h4 class="besides__name">Веночки, гребешки, обручи</h4>
 							<div class="besides__img">
-								<img src="/img/products/2_3.jpg" alt="besides item 1">
+								<img src="img/products/2_3.jpg" alt="besides item 1">
 							</div>
 							<button class="btn btn--orange btn--prise" name="besides-item_3">Узнать стоимость</button>
 						</div>
 					</div>
+				</div>
+			</section>
+			<section class="form__catalog">
+				<div class="form__wrapper container">
+					<p class="form__title">Заполните форму,</p>
+					<p class="form__text">
+						чтобы получить полный фотокаталог товара
+						на Вашу почту в течение 15 минут
+					</p>
+					<form class="form form--catalog" action="#">
+						<div class="form-item">
+							<label for="catalog-name" class="visually-hidden"></label>
+							<input id="catalog-name" type="text" name="name" placeholder="Ваше Имя">
+						</div>
+						<div class="form-item">
+							<label for="catalog-mobile" class="visually-hidden"></label>
+							<input id="catalog-mobile" type="tel" name="phone" placeholder="Ваш Телефон">
+						</div>
+						<div class="form-item">
+							<label for="catalog-email" class="visually-hidden"></label>
+							<input id="catalog-email" type="email" name="email" placeholder="Ваша почта">
+						</div>
+						<button class="btn btn--orange btn--form" type="submit" name="form1">Получить фотокаталог</button>
+					</form>
 				</div>
 			</section>
 		</main>
