fix path to logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<header class="header">
 			<div class="header__logo">
 				<div class="logo__img">
-					<img src="/img/header/logo_header.svg" alt="logo header">
+					<img src="img/header/logo_header.svg" alt="logo header">
 				</div>
 				<p class="logo__text">
 					Дистрибьютор товаров для рукоделия по Украине
