--- a/index.html
+++ b/index.html
@@ -263,6 +263,39 @@
 					</form>
 				</div>
 			</section>
+			<section class="services">
+					<div class="services__wrapper container">
+						<h2 class="services__title">Услуги нашей компании</h2>
+							<div class="services__item">
+								<div class="services__image">
+									<img src="img/services/1.jpg" alt="services item 1">
+								</div>
+								<div class="services__info">
+									<h3 class="services__info__title">Бесплатная консультация <br> по подбору ассортимента</h3>
+									<p class="services__info__desc">
+										Наш специалист поможет подобрать необходимые товары
+										под Ваши потребности и пожелания по виду, цвету и коплемктации.
+										После консультации Вы сможете сформировать заказ, и мы отправим его Вам.
+									</p>
+									<button class="btn btn--orange btn--services" name="services--item1">Получить консультацию</button>
+								</div>
+							</div>
+							<div class="services__item">
+								<div class="services__image">
+									<img src="img/services/2.jpg" alt="services item 2">
+								</div>
+								<div class="services__info">
+									<h3 class="services__info__title">Изготовление цветочных венков в <br> украинском стиле под заказ за 2-3 дня</h3>
+									<p class="services__info__desc">
+										Наша команда изготавливает венки как украшения для искушенной аудитории, которая
+										являться фанатами украинского стиля. Используем только качественные цветки и материалы
+										от польских и турецких производителей для создания	дизайнерского венка.
+									</p>
+									<button class="btn btn--orange btn--services" name="services--item2">Получить консультацию</button>
+								</div>
+							</div>
+					</div>
+			</section>
 		</main>
 		<footer class="footer">
 	
