--- a/index.html
+++ b/index.html
@@ -346,6 +346,49 @@
 					<button class="slide__btn btn--next"></button>
 				</div>
 			</section>
+			<section class="order">
+				<div class="order__wrapper container">
+					<h2 class="order__title">Сделать заказ очень просто</h2>
+					<div class="order__list">
+						<div class="order__item">
+							<div class="order__item__img">
+								<img src="/img/order/1.jpg" alt="order item 1">
+							</div>
+							<p class="order__item__text">
+								Вы оставляете заявку, и наш менеджер связывается
+								с Вами в течение 15 минут для консультации
+							</p>
+						</div>
+						<div class="order__item">
+							<div class="order__item__img">
+								<img src="/img/order/2.jpg" alt="order item 2">
+							</div>
+							<p class="order__item__text">
+								Менеджер помогает подобрать товар по цвету, виду и размерам
+							</p>
+						</div>
+						<div class="order__item">
+							<div class="order__item__img">
+								<img src="/img/order/3.jpg" alt="order item 3">
+							</div>
+							<p class="order__item__text">
+								Мы комплектуем заказ, оформляем накладную, и Вы вносите оплату
+							</p>
+						</div>
+						<div class="order__item">
+							<div class="order__item__img">
+								<img src="/img/order/4.jpg" alt="order item 4">
+							</div>
+							<p class="order__item__text"> 
+								Отправляем заказ удобной для Вас службой доставки в день обращения
+							</p>
+						</div>
+					</div>
+					<div class="order__btns">
+						<button class="btn btn--orange btn--order" name="order btn">Оставить заявку</button>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 	
