add сontacts and map

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 					<div class="order__list">
 						<div class="order__item">
 							<div class="order__item__img">
-								<img src="/img/order/1.jpg" alt="order item 1">
+								<img src="img/order/1.jpg" alt="order item 1">
 							</div>
 							<p class="order__item__text">
 								Вы оставляете заявку, и наш менеджер связывается
@@ -361,7 +361,7 @@
 						</div>
 						<div class="order__item">
 							<div class="order__item__img">
-								<img src="/img/order/2.jpg" alt="order item 2">
+								<img src="img/order/2.jpg" alt="order item 2">
 							</div>
 							<p class="order__item__text">
 								Менеджер помогает подобрать товар по цвету, виду и размерам
@@ -369,7 +369,7 @@
 						</div>
 						<div class="order__item">
 							<div class="order__item__img">
-								<img src="/img/order/3.jpg" alt="order item 3">
+								<img src="img/order/3.jpg" alt="order item 3">
 							</div>
 							<p class="order__item__text">
 								Мы комплектуем заказ, оформляем накладную, и Вы вносите оплату
@@ -377,7 +377,7 @@
 						</div>
 						<div class="order__item">
 							<div class="order__item__img">
-								<img src="/img/order/4.jpg" alt="order item 4">
+								<img src="img/order/4.jpg" alt="order item 4">
 							</div>
 							<p class="order__item__text"> 
 								Отправляем заказ удобной для Вас службой доставки в день обращения
@@ -389,6 +389,30 @@
 					</div>
 				</div>
 			</section>
+			<div class="сontacts_and_map">
+				<div class="сontacts_and_map__wrapper container">
+					<section class="сontacts">
+						<h2 class="сontacts__title">Наши <br>	контакты </h2>
+						<div class="сontacts__wrapper">
+							<p class="сontacts__address">мкр. Диброва, Новоднестровск, Черновецкая область</p>
+							<p class="сontacts__phone">+380 98-104-9171</p>
+							<p class="сontacts__email">natalianecaeva2017@gmail.com</p>
+						</div>
+						<div class="сontacts__question">
+							<p class="question__title">Остались вопросы?</p>
+							<p class="question__desc">Наш специалист ответит <br>	на них в течение 15 мин</p>
+						</div>
+						<button class="btn btn--orange btn--сontacts" name="сontacts-btn">Задать вопрос</button>
+					</section>
+					<section class="map">
+						<div class="map__wrapper">
+							<div class="map__img">
+								<img src="img/map/map.jpg" alt="map">
+							</div>
+						</div>
+					</section>
+				</div>
+			</div>
 		</main>
 		<footer class="footer">
 	
