--- a/index.html
+++ b/index.html
@@ -415,10 +415,24 @@
 			</div>
 		</main>
 		<footer class="footer">
-	
+			<div class="footer__wrapper container">
+				<div class="footer__logo">
+					<img src="img/footer/logo_footer.svg" alt="footer logo">
+				</div>
+				<div class="footer__info">
+					<a href="#" class="footer__info__link">Политика конфиденциальности</a>
+					<p class="footer__info__copyright">© 2020 «Товары для рукоделья». Все права защищены</p>
+				</div>
+				<div class="footer__logo-studio">
+					<p class="logo-studio__info">Проект <br> разработан:</p>
+					<div class="logo-studio__img">
+						<img src="img/footer/logo_studio.svg" alt="logo studio">
+					</div>
+				</div>
+			</div>
 		</footer>
 	</div>
 
-    <script src="js/bundle.js"></script>
+  <script src="js/bundle.js"></script>
 </body>
 </html>
