--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 							<label for="radio-4"></label>
 						</div>
 						<div class="form_radio">
-							<input type="radio" id="radio-5" class="nav__btn" name="slide__btn" value="5" disabled>
+							<input type="radio" id="radio-5" class="nav__btn" name="slide__btn" value="5">
 							<label for="radio-5"></label>
 						</div>						
 					</div>
