add modal open and close

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 					<label for="catalog-email__modal" class="visually-hidden"></label>
 					<input id="catalog-email__modal" type="email" name="email" placeholder="Ваша почта">
 				</div>
-				<button class="btn btn--orange btn--form" type="submit" name="form-modal">Узнать про цветопробу</button>
+				<button class="btn btn--orange btn--form btn--form-modal" type="submit" name="form-modal">Узнать про цветопробу</button>
 			</form>
 			<span class="close__modal"></span>
 		</div>
